<resources>
    <string name="home_conn_tap_to_open" translatable="false">Tap to Connect</string>
    <string name="home_conn_connecting" translatable="false">Connecting...</string>
    <string name="home_conn_connected" translatable="false">Connected</string>
    <string name="drawer_menu_account" translatable="false">Account</string>
    <string name="drawer_menu_settings" translatable="false">Settings</string>
    <string name="drawer_menu_app_filter" translatable="false">Apps Filter</string>
    <string name="drawer_menu_feedback" translatable="false"><![CDATA[Help & Feedback]]></string>
    <string name="drawer_menu_share" translatable="false">Share App</string>
    <string name="account_title" translatable="false">Account</string>
    <string name="account_type" translatable="false">Account Type</string>
    <string name="account_user_id" translatable="false">User ID</string>
    <string name="account_upgrade" translatable="false">Upgrade</string>
    <string name="settings_title" translatable="false">Settings</string>
    <string name="settings_auto_connect" translatable="false">Auto-connect when app starts</string>
    <string name="settings_last_selected" translatable="false">Save Last selected server</string>
    <string name="settings_remove_ads" translatable="false">Remove ads</string>
    <string name="settings_manage_sub" translatable="false">Manage Subscription</string>
    <string name="settings_about" translatable="false">About</string>
    <string name="settings_collect_logs" translatable="false">Collect Logs</string>
    <string name="about_title" translatable="false">About</string>
    <string name="about_check_update" translatable="false">Check for Updates</string>
    <string name="about_terms_of_service" translatable="false">Terms of Service</string>
    <string name="about_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="feedback_title" translatable="false"><![CDATA[Help & Feedback]]></string>
    <string name="feedback_how_feel" translatable="false">How do you feel about our app?</string>
    <string name="feedback_connect_failed" translatable="false">Connect failed</string>
    <string name="feedback_always_connecting" translatable="false">Always connecting</string>
    <string name="feedback_auto_disconnected" translatable="false">Auto-disconnected</string>
    <string name="feedback_server_is_full" translatable="false">Server is full/sleep</string>
    <string name="feedback_speed_too_low" translatable="false">Speed_too_low</string>
    <string name="feedback_too_much_ads" translatable="false">Too much adverting</string>
    <string name="feedback_other" translatable="false">Describe your other question</string>
    <string name="feedback_more" translatable="false">More ></string>
    <string name="feedback_submit" translatable="false">Submit</string>
    <string name="vip_upgrade_to" translatable="false">Upgrade to VIP</string>
    <string name="vip_permission_1" translatable="false">Worldwide Location</string>
    <string name="vip_permission_2" translatable="false">Bypass Restricted Network</string>
    <string name="vip_permission_3" translatable="false">Streaming Servers</string>
    <string name="vip_permission_4" translatable="false">Faster Speed</string>
    <string name="vip_permission_5" translatable="false">No Ads</string>
    <string name="vip_monthly_plan_name" translatable="false">Monthly Plan</string>
    <string name="vip_yearly_plan_name" translatable="false">Yearly Plan</string>
    <string name="vip_weekly_plan_name" translatable="false">Weekly Plan</string>
    <string name="vip_sub_hint1" translatable="false">Subscription auto-renews until canceled.</string>
    <string name="vip_sub_hint2" translatable="false">Cancel anytime on Google Play Store.</string>
    <string name="node_title" translatable="false">Select Server</string>
    <string name="node_location" translatable="false">Location</string>
    <string name="node_streaming" translatable="false">Streaming</string>
    <string name="node_no_available_server" translatable="false">No available server,please refresh the server list.</string>
    <string name="node_no_available_refresh" translatable="false">Refresh</string>
    <string name="node_auto_select" translatable="false">Auto select</string>
    <string name="node_free_vip0" translatable="false">FREE</string>
    <string name="toast_copied" translatable="false">Copied</string>
    <string name="toast_reconnect_node" translatable="false">The configuration has changed.Please reconnect the server.</string>
    <string name="toast_network_unavailable" translatable="false">Network unavailable.Check the network setting.</string>
    <string name="app_name" translatable="false">SafeBit VPN</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Configuration file</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import config from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import config from Clipboard</string>
    <string name="menu_item_import_config_local">Import config from locally</string>
    <string name="menu_item_import_config_manually_vmess">Type manually[VMess]</string>
    <string name="menu_item_import_config_manually_vless">Type manually[VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Type manually[Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Type manually[SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Type manually[HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Type manually[Trojan]</string>
    <string name="menu_item_import_config_manually_wireguard">Type manually[Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Type manually[Hysteria2]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint" translatable="false">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string name="server_lab_reserved">Reserved(Optional, separated by commas)</string>
    <string name="server_lab_local_address">Local address (optional IPv4/IPv6, separated by commas)</string>
    <string name="server_lab_local_mtu">Mtu(optional, default 1420)</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a Config File</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize Config</string>
    <string name="toast_config_file_invalid">Invalid Config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="server_obfs_password">Obfs password</string>
    <string name="server_lab_port_hop">Port Hopping(will override the port)</string>
    <string name="server_lab_port_hop_interval">Port Hopping Interval</string>
    <string name="server_lab_stream_pinsha256">pinSHA256</string>
    <string name="server_lab_bandwidth_down">Bandwidth down (units)</string>
    <string name="server_lab_bandwidth_up">Bandwidth up (units)</string>
</resources>