<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/drawer_menu_account"
        android:icon="@drawable/ic_person_24px"
        android:title="@string/drawer_menu_account"/>
    <item
        android:id="@+id/drawer_menu_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/drawer_menu_settings" />
    <item
        android:id="@+id/drawer_menu_app_filter"
        android:icon="@drawable/ic_filter_alt_24px"
        android:title="@string/drawer_menu_app_filter" />
    <item
        android:id="@+id/drawer_menu_feedback"
        android:icon="@drawable/ic_contact_support_24px"
        android:title="@string/drawer_menu_feedback" />
    <item
        android:id="@+id/drawer_menu_share"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/drawer_menu_share" />

</menu>
