<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vipLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/vip_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_cancel_24px"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/vip_rocket"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/rocket_launch_24px"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/vip_upgrade_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vip_rocket"
        android:text="@string/vip_upgrade_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/vip_feature_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vip_upgrade_to"
        app:strokeWidth="0dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vip_upgrade_to">

            <TextView
                android:id="@+id/vip_permission_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/public_24px"
                android:drawablePadding="10dp"
                android:text="@string/vip_permission_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/vip_permission_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/encrypted_24px"
                android:drawablePadding="10dp"
                android:text="@string/vip_permission_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/vip_permission_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/play_circle_24px"
                android:drawablePadding="10dp"
                android:text="@string/vip_permission_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/vip_permission_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/flash_on_24px"
                android:drawablePadding="10dp"
                android:text="@string/vip_permission_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/vip_permission_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/ad_off_24px"
                android:drawablePadding="10dp"
                android:text="@string/vip_permission_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vip_yearly_plan"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:contentPadding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vip_feature_card"
        app:strokeWidth="1dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/vip_yearly_plan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip_yearly_plan_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                android:id="@+id/vip_yearly_plan_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$4.99/month"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                android:id="@+id/vip_yearly_plan_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="save 50%"
                android:background="@drawable/round_bg"
                app:layout_constraintTop_toBottomOf="@+id/vip_yearly_plan_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <TextView
                android:id="@+id/vip_yearly_plan_original_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="$99.99"
                app:layout_constraintTop_toBottomOf="@+id/vip_yearly_plan_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vip_yearly_plan_price_actual"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <TextView
                android:id="@+id/vip_yearly_plan_price_actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="$59.99/year"
                app:layout_constraintTop_toBottomOf="@+id/vip_yearly_plan_price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vip_monthly_plan"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:contentPadding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vip_yearly_plan"
        app:strokeWidth="1dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/vip_monthly_plan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip_monthly_plan_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                android:id="@+id/vip_monthly_plan_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$9.99/month"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vip_weekly_plan"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:contentPadding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vip_monthly_plan"
        app:strokeWidth="1dp"
        app:cardCornerRadius="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/vip_weekly_plan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip_weekly_plan_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                android:id="@+id/vip_weekly_plan_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$5.99/week"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/vip_sub_hint1"
        app:layout_constraintBottom_toTopOf="@+id/vip_sub_hint2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
    <TextView
        android:id="@+id/vip_sub_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/vip_sub_hint2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

</androidx.constraintlayout.widget.ConstraintLayout>