<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/padding_spacing_dp16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Free Plan"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/account_action_upgrade"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/account_upgrade" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_user_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/account_user_id_v"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="xx"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <ImageButton
            android:id="@+id/account_user_id_copy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:alpha="0.62"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/content_copy_24px" />
    </LinearLayout>

</LinearLayout>